--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
 * {
     /* Colors */
     /* Neutral */
@@ -28,6 +29,7 @@
 
 html {
     font-size: 62.5%;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 h1 {
@@ -40,4 +42,5 @@ h2 {
 
 h3 {
     font-size: 1.4rem;
+    font-weight: 300;
 }
