--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,6 @@
 .Home {
     display: grid;
-    grid-template: 90px minmax(45px, 150px) 30px minmax(0px, auto) minmax(250px, auto) / minmax(320px, 1fr);
+    grid-template: 90px minmax(45px, 150px) 30px minmax(0px, 150px) minmax(250px, auto) / minmax(320px, 1fr);
     background-color: var(--VeryLightGrayLightModeBG);
 }
 
@@ -113,7 +113,16 @@
 
 .Main {
     grid-area: 4 / 1 / 6 / 2;
-    background-color: tomato;
+    justify-self: center;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
+    grid-auto-rows: auto;
+    grid-gap: 20px;
+    gap: 20px;
+    width: 100%;
+    max-width: 1200px;
+    background-color: var(--VeryLightGrayLightModeBG);
 }
 
 
@@ -121,7 +130,7 @@
 
 @media (min-width: 610px) {
     .Home {
-        grid-template: 90px 50px 30px minmax(0px, auto) minmax(250px, auto) / minmax(320px, 1fr);
+        grid-template: 90px 50px 30px minmax(0px, 150px) minmax(250px, auto) / minmax(320px, 1fr);
     }
 
     .Inputs {
