add cardCountry - BorderTag - mvp

--- a/src/styles/components/BorderTag.module.css
+++ b/src/styles/components/BorderTag.module.css
@@ -4,7 +4,8 @@
     align-items: center;
     margin: 0px 8px 8px 0px;
     width: 100px;
-    height: 30px;
+    min-height: 30px;
+    max-height: fit-content;
     background-color: var(--WhiteDarkModeTextAndLightModeElements);
     box-shadow: 1px 1px 6px var(--DarkGrayLightModeInput);
     cursor: pointer;
