--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -10,9 +10,12 @@
     justify-content: space-around;
     align-items: center;
     background-color: var(--WhiteDarkModeTextAndLightModeElements);
+    box-shadow: 1px 1px 6px var(--DarkGrayLightModeInput);
 }
 
 .Inputs {
+    position: sticky;
+    top: 20px;
     grid-area: 2 / 1 / 4 / 2 ;
     display: flex;
     flex-wrap: wrap;
@@ -29,6 +32,7 @@
     width: 90%;
     border-radius: 5px;
     background-color: var(--WhiteDarkModeTextAndLightModeElements);
+    box-shadow: 1px 1px 6px var(--DarkGrayLightModeInput);
 }
 
 .Search__icon {
@@ -68,6 +72,10 @@
     background-color: var(--WhiteDarkModeTextAndLightModeElements); 
 }
 
+.Filter h3 {
+    font-weight: 600;
+}
+
 .Filter__title {
     width: 60%;
 }
@@ -85,11 +93,17 @@
 
 .Options {
     grid-area: 3 / 1 / 5 / 2 ;
-    display: flex;
+    display: none;
     justify-content: center;
     margin-top: 16px;
     z-index: 1;
 }
+
+
+.OptionsActive {
+    display: flex;
+}
+
 
 .Options__container {
     width: 90%;
@@ -108,6 +122,11 @@
     display: flex;
     align-items: center;
     font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.Options__container li:hover {
+    background-color: var(--VeryLightGrayLightModeBG);
 }
 
 
@@ -120,7 +139,7 @@
     grid-auto-rows: auto;
     grid-gap: 20px;
     gap: 20px;
-    width: 100%;
+    width: 95%;
     max-width: 1200px;
     background-color: var(--VeryLightGrayLightModeBG);
 }
@@ -130,7 +149,7 @@
 
 @media (min-width: 610px) {
     .Home {
-        grid-template: 90px 50px 30px minmax(0px, 150px) minmax(250px, auto) / minmax(320px, 1fr);
+        grid-template: 90px 90px 30px minmax(0px, 150px) minmax(250px, auto) / minmax(320px, 1fr);
     }
 
     .Inputs {
@@ -158,5 +177,9 @@
         justify-content: flex-end;
         display: flex;
         width: 100%;
+    }
+    .Main {
+        justify-items: unset;
+        justify-content: space-evenly;
     }
 }
