--- a/src/styles/components/CardCountry.module.css
+++ b/src/styles/components/CardCountry.module.css
@@ -1,6 +1,7 @@
 .CardCountry {
     padding-bottom: 40px;
     width: 90%;
+    max-width: 420px;
 }
 
 .Image {
@@ -10,11 +11,8 @@
 
 .Image img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
-}
-
-.Content {
-
 }
 
 .Content div {
@@ -28,4 +26,34 @@
 .Info3__Borders  {
     display: flex;
     flex-wrap: wrap;
+}
+
+/* ________________________________________________MEDIAQUERIES__________________________ */
+
+@media (min-width: 867px) {
+    .CardCountry {
+        display: flex;
+        justify-content: space-between;
+        max-width: none;
+        max-height: 400px;
+    }
+    .Image {
+        width: 45%;
+        margin: 0;
+    }
+    .Content {
+        width: 45%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .Content__title {
+        width: 100%;
+    }
+    .Content__info1 {
+        width: 50%;
+    }
+    .Content__info2 {
+        width: 50%;
+    }
+
 }
