--- a/src/styles/components/CardMain.module.css
+++ b/src/styles/components/CardMain.module.css
@@ -1,11 +1,12 @@
 .CardMain {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 100%;
     height: 380px;
-    max-width: 320px;
+    max-width: 420px;
     background-color: var(--WhiteDarkModeTextAndLightModeElements);
+    box-shadow: 1px 1px 6px var(--DarkGrayLightModeInput);
     border-radius: 5px;
     cursor: pointer;
     overflow: hidden;
@@ -19,6 +20,7 @@
 .Image img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .Title {
