--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -18,9 +18,10 @@
     - Detail Page: 16px 
 
     ### Fonts
-
+    
     - Family: [Nunito Sans](https://fonts.google.com/specimen/Nunito+Sans)
     - Weights: 300, 600, 800 */
+    --fontFamily: 'Nunito Sans', sans-serif;
 
     margin: 0;
     padding: 0;
@@ -29,7 +30,7 @@
 
 html {
     font-size: 62.5%;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: var(--fontFamily);
 }
 
 h1 {
