--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -14,8 +14,8 @@
 }
 
 .Inputs {
-    position: sticky;
-    top: 20px;
+    /* position: sticky;
+    top: 20px; */
     grid-area: 2 / 1 / 4 / 2 ;
     display: flex;
     flex-wrap: wrap;
@@ -42,9 +42,9 @@
     width: 45px;
 }
 
-.Search__icon img {
+/* .Search__icon img {
     width: 45%;
-}
+} */
 
 .Search__input {
     width: 80%;
@@ -64,7 +64,7 @@
 
 .Filter {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     width: 220px;
     height: 50px;
@@ -83,13 +83,13 @@
 .Filter__icon {
     display: flex;
     justify-content: flex-end;
-    width: 45px;
-}
-
-.Filter__icon img {
-    width: 30%;
+    width: 15px;
     cursor: pointer;
 }
+/* 
+.Filter__icon img {
+    width: 30%;
+} */
 
 .Options {
     grid-area: 3 / 1 / 5 / 2 ;
