--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,6 @@
 .Home {
     display: grid;
-    grid-template: 90px minmax(45px, 150px) 30px minmax(0px, 150px) minmax(250px, auto) / minmax(320px, 1fr);
+    grid-template: 90px minmax(45px, 150px) 30px minmax(0px, 150px) minmax(100vh, auto) / minmax(320px, 1fr);
     background-color: var(--VeryLightGrayLightModeBG);
 }
 
@@ -54,6 +54,9 @@
 .Search__input input {
     width: 100%;
     height: 100%;
+    color: var(--VeryDarkBlueLightModeText);
+    font-family: var(--fontFamily);
+    font-size: 1.4rem;
     border: none;
     outline: none;
 }
@@ -70,6 +73,7 @@
     height: 50px;
     border-radius: 5px;
     background-color: var(--WhiteDarkModeTextAndLightModeElements); 
+    color: var(--VeryDarkBlueLightModeText);
 }
 
 .Filter h3 {
@@ -141,7 +145,50 @@
     gap: 20px;
     width: 95%;
     max-width: 1200px;
-    background-color: var(--VeryLightGrayLightModeBG);
+}
+
+
+/* ___________________DARKMODE_____________________________________ */
+
+.Home__darkMode {
+    background-color: var(--VeryDarkBlueDarkModeBG);
+}
+
+.Header__darkMode {
+    background-color: var(--DarkBlueDarkModeElements);
+    box-shadow: 1px 1px 6px var(--VeryDarkBlueLightModeText);
+}
+
+.Search__darkMode {
+    background-color: var(--DarkBlueDarkModeElements);
+    box-shadow: 1px 1px 6px var(--VeryDarkBlueLightModeText);
+}
+
+.Search__darkMode input {
+    background-color: var(--DarkBlueDarkModeElements);
+}
+
+.Search__darkMode input::placeholder {
+    color: var(--WhiteDarkModeTextAndLightModeElements);
+}
+
+.Filter__darkMode {
+    background-color: var(--DarkBlueDarkModeElements);
+    color: var(--WhiteDarkModeTextAndLightModeElements);
+    box-shadow: 1px 1px 6px var(--VeryDarkBlueLightModeText);
+}
+
+.Options__filter__darkMode {
+    background-color: var(--DarkBlueDarkModeElements);
+    color: var(--WhiteDarkModeTextAndLightModeElements);
+}
+
+.Options__container__darkMode li:hover {
+    background-color: var(--VeryDarkBlueDarkModeBG);
+}
+
+.Search__input__darkMode input {
+    color: var(--WhiteDarkModeTextAndLightModeElements);
 }
 
 
@@ -149,7 +196,7 @@
 
 @media (min-width: 610px) {
     .Home {
-        grid-template: 90px 90px 30px minmax(0px, 150px) minmax(250px, auto) / minmax(320px, 1fr);
+        grid-template: 90px 90px 30px minmax(0px, 150px) minmax(60vh, auto) / minmax(320px, 1fr);
     }
 
     .Inputs {
