--- a/src/styles/components/CardMain.module.css
+++ b/src/styles/components/CardMain.module.css
@@ -7,6 +7,7 @@
     max-width: 420px;
     background-color: var(--WhiteDarkModeTextAndLightModeElements);
     box-shadow: 1px 1px 6px var(--DarkGrayLightModeInput);
+    color: var(--VeryDarkBlueLightModeText);
     border-radius: 5px;
     cursor: pointer;
     overflow: hidden;
@@ -37,4 +38,12 @@
 
 .Info h3 strong {
     font-weight: 600;
+}
+
+/* _________________________________________DARKMODE__________________________________ */
+
+.CardMain__darkMode {
+    background-color: var(--DarkBlueDarkModeElements);
+    color: var(--WhiteDarkModeTextAndLightModeElements);
+    box-shadow: 1px 1px 6px var(--VeryDarkBlueLightModeText);
 }
