--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -26,12 +26,24 @@
 
 .Theme__button {
     border: none;
-    background-color: var(--WhiteDarkModeTextAndLightModeElements);
     font-family: var(--fontFamily);
     font-size: 1.4rem;
     font-weight: 600;
+    background-color: var(--WhiteDarkModeTextAndLightModeElements);
+    color: var(--VeryDarkBlueLightModeText);
     cursor: pointer;
     outline: none;
+}
+
+/* ______________________________DARKMODE_________________________________ */
+
+.Title__darkMode h1 {
+    color: var(--WhiteDarkModeTextAndLightModeElements);
+}
+
+.Theme__button__darkMode {
+    background-color: var(--DarkBlueDarkModeElements);
+    color: var(--WhiteDarkModeTextAndLightModeElements);
 }
 
 
