--- a/src/styles/Country.module.css
+++ b/src/styles/Country.module.css
@@ -34,12 +34,15 @@
     cursor: pointer;
 }
 
-.Button__container a {
+.Button__container button {
     margin-left: 8px;
     font-size: 1.4rem;
     font-weight: 600;
     color: var(--VeryDarkBlueLightModeText);
-    text-decoration: none;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    outline: none;
 }
 
 .Main {
@@ -65,6 +68,6 @@
     box-shadow: 1px 1px 6px var(--VeryDarkBlueLightModeText);
 }
 
-.Button__container__darkMode a {
+.Button__container__darkMode button {
     color: var(--WhiteDarkModeTextAndLightModeElements);
 }
